infrastructure/prod/timelord-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: timelord-ingress
spec:
  rules:
    - host: $(HOST)
      http:
        paths:
          - backend:
              serviceName: timelord
              servicePort: 80
            path: /
  tls:
    - hosts:
        - $(HOST)
      secretName: $(SECRET_NAME)
